syntax = "proto3";

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "net.pfsnc.apicomp.fh.grpc";
option java_outer_classname = "BatchProto";

message BatchRequest {
  repeated SingleRequest requests = 1;
}

message SingleRequest {
  string method = 1;
  string endpoint = 2;
  map<string, string> params = 3;
  google.protobuf.Struct body = 4;
}

message SingleResponse {
  string endpoint = 1;
  string status = 2;
  string body = 3;
}

service BatchService {
  rpc ProcessBatch(BatchRequest) returns (stream SingleResponse);
}
